feature/MAR10001-1616: - Added configuration options for limit and bidirectionality for related items - Added API support for all different related items - Fixed issue with inventoryitem in api query on related items
